# hcom

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FYI.md  HANDOFF.md  Justfile  PROJECT_INDEX.json  README.md  antigravity-integration.md  build.sh  dist-workspace.toml  gemini-extension.json  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude-plugin/: marketplace.json
.github/: build-setup.yml
coordination/: deepwiki-public-hcom-sourcepack.md
docs/: architecture.md  command-reference.md  configuration.md  deepwiki-mcp-usage.md  development.md  hook-system.md  multi-agent-workflows.md  relay.md
scripts/: install-mock-tools.ps1  install-mock-tools.sh  typecheck.sh
src/: agent_prompts.rs  bootstrap.rs  claude_actor.rs  cli_context.rs  config.rs  db.rs  delivery.rs  identity.rs  instance_binding.rs  instance_lifecycle.rs  instance_names.rs  instances.rs  integration_spec.rs  launcher.rs  main.rs  messages.rs  paths.rs  pidtrack.rs  router.rs  runtime_env.rs  shell_env.rs  terminal.rs  tool.rs  transcript.rs  update.rs
src/native/: Cargo.toml
src/native/src/: config.rs  db.rs  delivery.rs  log.rs  main.rs  notify.rs  paths.rs  tool.rs
src/native/src/client/: connection.rs  daemon.rs  mod.rs  protocol.rs
src/native/src/pty/: inject.rs  mod.rs  screen.rs  terminal.rs
src/native/src/tui/: actions.rs  app.rs  db.rs  input.rs  mod.rs  model.rs  rpc.rs  rpc_async.rs  state.rs  status.rs
src/native/src/tui/render/: agents.rs  launch.rs  mod.rs
test/: conftest.py
tests/: cli_smoke.rs  parser_help_drift.rs  real_tool_codex.rs  (+2 more)
(+268 files in other folders)
